# kore-agent

./: .gitignore  README.md  pyproject.toml
kore/: __init__.py
kore/cli/: formatter.py  main.py
kore/cli/commands/: chat.py  daemon.py  task.py  web.py
kore/core/: event_bus.py  executor.py  notifier.py  scheduler.py  trigger.py
kore/llm/: chat.py  client.py  tool_handlers.py  tools.py
kore/storage/: db.py  models.py  repository.py
kore/tasks/: base.py  http.py  python_task.py  shell.py
kore/utils/: config.py  logger.py  retry.py  safe_path.py  serializer.py
tests/: test_event_bus.py  test_llm.py  test_storage.py  test_tasks.py  test_utils.py
web/: __init__.py  app.py  auth.py  i18n.py
web/api/: __init__.py  v1_runs.py  v1_stats.py  v1_tasks.py
web/routes/: __init__.py  dashboard.py  runs.py  tasks.py
web/static/: style.css
web/templates/: 404.html  base.html  dashboard.html  login.html  run_detail.html  runs.html  task_detail.html  task_form.html  task_list.html
