[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kore"
version = "0.1.0"
description = "自动化任务 Agent - CLI + 轻量 Web 双模式任务编排引擎"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CBN" }
]

dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0",
  "apscheduler>=3.10,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "httpx>=0.27,<1.0",
  "pyyaml>=6.0,<7.0",
  "pydantic>=2.5,<3.0",
  "pydantic-settings>=2.1,<3.0",
  "openai>=1.0,<2.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.109,<1.0",
  "uvicorn[standard]>=0.27,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.6,<1.0",
  "sse-starlette>=1.8,<2.0",
]
watch = [
  "watchfiles>=0.21,<1.0",
]
notify = [
  "plyer>=2.1,<3.0",
]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pytest-cov>=4.1,<6.0",
  "pytest-httpx>=0.30,<1.0",
  "ruff>=0.1,<1.0",
  "mypy>=1.7,<2.0",
]

[project.scripts]
kore = "kore.cli.main:app"

[tool.setuptools.packages.find]
include = ["kore*"]

[tool.setuptools.package-data]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "C4"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
